--- a/style.css
+++ b/style.css
@@ -185,519 +185,6 @@ body {
   border-radius: 1rem;
 }
 
-.bubbles {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.bubble {
-  z-index: -1000;
-  position: absolute;
-  left: var(--bubble-left-offset);
-  bottom: -75%;
-  display: block;
-  width: var(--bubble-radius);
-  height: var(--bubble-radius);
-  border-radius: 50%;
-  animation: float-up var(--bubble-float-duration) var(--bubble-float-delay) ease-in infinite;
-}
-.bubble::before {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: hsla(183, 94%, 76%, 0.3);
-  border-radius: inherit;
-  animation: var(--bubble-sway-type) var(--bubble-sway-duration) var(--bubble-sway-delay) ease-in-out alternate infinite;
-}
-.bubble:nth-child(0) {
-  --bubble-left-offset: 86vw;
-  --bubble-radius: 8vw;
-  --bubble-float-duration: 12s;
-  --bubble-sway-duration: 4s;
-  --bubble-float-delay: 1s;
-  --bubble-sway-delay: 4s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(1) {
-  --bubble-left-offset: 85vw;
-  --bubble-radius: 6vw;
-  --bubble-float-duration: 8s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 4s;
-  --bubble-sway-delay: 0s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(2) {
-  --bubble-left-offset: 32vw;
-  --bubble-radius: 2vw;
-  --bubble-float-duration: 7s;
-  --bubble-sway-duration: 4s;
-  --bubble-float-delay: 4s;
-  --bubble-sway-delay: 1s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(3) {
-  --bubble-left-offset: 18vw;
-  --bubble-radius: 3vw;
-  --bubble-float-duration: 10s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 4s;
-  --bubble-sway-delay: 3s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(4) {
-  --bubble-left-offset: 10vw;
-  --bubble-radius: 10vw;
-  --bubble-float-duration: 9s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 0s;
-  --bubble-sway-delay: 4s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(5) {
-  --bubble-left-offset: 42vw;
-  --bubble-radius: 5vw;
-  --bubble-float-duration: 11s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 4s;
-  --bubble-sway-delay: 3s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(6) {
-  --bubble-left-offset: 22vw;
-  --bubble-radius: 8vw;
-  --bubble-float-duration: 10s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 4s;
-  --bubble-sway-delay: 3s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(7) {
-  --bubble-left-offset: 34vw;
-  --bubble-radius: 7vw;
-  --bubble-float-duration: 12s;
-  --bubble-sway-duration: 4s;
-  --bubble-float-delay: 1s;
-  --bubble-sway-delay: 4s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(8) {
-  --bubble-left-offset: 89vw;
-  --bubble-radius: 5vw;
-  --bubble-float-duration: 6s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 0s;
-  --bubble-sway-delay: 4s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(9) {
-  --bubble-left-offset: 40vw;
-  --bubble-radius: 10vw;
-  --bubble-float-duration: 11s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 1s;
-  --bubble-sway-delay: 4s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(10) {
-  --bubble-left-offset: 23vw;
-  --bubble-radius: 8vw;
-  --bubble-float-duration: 8s;
-  --bubble-sway-duration: 4s;
-  --bubble-float-delay: 3s;
-  --bubble-sway-delay: 1s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(11) {
-  --bubble-left-offset: 32vw;
-  --bubble-radius: 7vw;
-  --bubble-float-duration: 7s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 0s;
-  --bubble-sway-delay: 4s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(12) {
-  --bubble-left-offset: 2vw;
-  --bubble-radius: 9vw;
-  --bubble-float-duration: 12s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 3s;
-  --bubble-sway-delay: 0s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(13) {
-  --bubble-left-offset: 73vw;
-  --bubble-radius: 2vw;
-  --bubble-float-duration: 6s;
-  --bubble-sway-duration: 4s;
-  --bubble-float-delay: 2s;
-  --bubble-sway-delay: 2s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(14) {
-  --bubble-left-offset: 21vw;
-  --bubble-radius: 9vw;
-  --bubble-float-duration: 12s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 1s;
-  --bubble-sway-delay: 0s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(15) {
-  --bubble-left-offset: 31vw;
-  --bubble-radius: 8vw;
-  --bubble-float-duration: 9s;
-  --bubble-sway-duration: 4s;
-  --bubble-float-delay: 1s;
-  --bubble-sway-delay: 0s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(16) {
-  --bubble-left-offset: 3vw;
-  --bubble-radius: 5vw;
-  --bubble-float-duration: 12s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 3s;
-  --bubble-sway-delay: 3s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(17) {
-  --bubble-left-offset: 85vw;
-  --bubble-radius: 10vw;
-  --bubble-float-duration: 11s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 0s;
-  --bubble-sway-delay: 0s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(18) {
-  --bubble-left-offset: 97vw;
-  --bubble-radius: 3vw;
-  --bubble-float-duration: 9s;
-  --bubble-sway-duration: 4s;
-  --bubble-float-delay: 4s;
-  --bubble-sway-delay: 2s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(19) {
-  --bubble-left-offset: 52vw;
-  --bubble-radius: 9vw;
-  --bubble-float-duration: 8s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 2s;
-  --bubble-sway-delay: 0s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(20) {
-  --bubble-left-offset: 37vw;
-  --bubble-radius: 7vw;
-  --bubble-float-duration: 10s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 1s;
-  --bubble-sway-delay: 4s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(21) {
-  --bubble-left-offset: 57vw;
-  --bubble-radius: 6vw;
-  --bubble-float-duration: 6s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 1s;
-  --bubble-sway-delay: 3s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(22) {
-  --bubble-left-offset: 82vw;
-  --bubble-radius: 10vw;
-  --bubble-float-duration: 12s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 3s;
-  --bubble-sway-delay: 1s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(23) {
-  --bubble-left-offset: 13vw;
-  --bubble-radius: 3vw;
-  --bubble-float-duration: 12s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 4s;
-  --bubble-sway-delay: 4s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(24) {
-  --bubble-left-offset: 95vw;
-  --bubble-radius: 10vw;
-  --bubble-float-duration: 11s;
-  --bubble-sway-duration: 4s;
-  --bubble-float-delay: 4s;
-  --bubble-sway-delay: 3s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(25) {
-  --bubble-left-offset: 75vw;
-  --bubble-radius: 4vw;
-  --bubble-float-duration: 11s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 4s;
-  --bubble-sway-delay: 2s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(26) {
-  --bubble-left-offset: 81vw;
-  --bubble-radius: 5vw;
-  --bubble-float-duration: 9s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 3s;
-  --bubble-sway-delay: 1s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(27) {
-  --bubble-left-offset: 60vw;
-  --bubble-radius: 10vw;
-  --bubble-float-duration: 8s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 2s;
-  --bubble-sway-delay: 1s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(28) {
-  --bubble-left-offset: 84vw;
-  --bubble-radius: 7vw;
-  --bubble-float-duration: 7s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 4s;
-  --bubble-sway-delay: 2s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(29) {
-  --bubble-left-offset: 79vw;
-  --bubble-radius: 8vw;
-  --bubble-float-duration: 12s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 1s;
-  --bubble-sway-delay: 3s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(30) {
-  --bubble-left-offset: 22vw;
-  --bubble-radius: 2vw;
-  --bubble-float-duration: 10s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 2s;
-  --bubble-sway-delay: 0s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(31) {
-  --bubble-left-offset: 7vw;
-  --bubble-radius: 10vw;
-  --bubble-float-duration: 6s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 1s;
-  --bubble-sway-delay: 4s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(32) {
-  --bubble-left-offset: 70vw;
-  --bubble-radius: 5vw;
-  --bubble-float-duration: 9s;
-  --bubble-sway-duration: 4s;
-  --bubble-float-delay: 0s;
-  --bubble-sway-delay: 3s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(33) {
-  --bubble-left-offset: 85vw;
-  --bubble-radius: 9vw;
-  --bubble-float-duration: 10s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 4s;
-  --bubble-sway-delay: 1s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(34) {
-  --bubble-left-offset: 76vw;
-  --bubble-radius: 9vw;
-  --bubble-float-duration: 11s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 3s;
-  --bubble-sway-delay: 2s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(35) {
-  --bubble-left-offset: 97vw;
-  --bubble-radius: 7vw;
-  --bubble-float-duration: 8s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 4s;
-  --bubble-sway-delay: 2s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(36) {
-  --bubble-left-offset: 81vw;
-  --bubble-radius: 10vw;
-  --bubble-float-duration: 12s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 2s;
-  --bubble-sway-delay: 1s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(37) {
-  --bubble-left-offset: 10vw;
-  --bubble-radius: 9vw;
-  --bubble-float-duration: 9s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 4s;
-  --bubble-sway-delay: 4s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(38) {
-  --bubble-left-offset: 96vw;
-  --bubble-radius: 2vw;
-  --bubble-float-duration: 11s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 1s;
-  --bubble-sway-delay: 3s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(39) {
-  --bubble-left-offset: 16vw;
-  --bubble-radius: 6vw;
-  --bubble-float-duration: 10s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 4s;
-  --bubble-sway-delay: 2s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(40) {
-  --bubble-left-offset: 53vw;
-  --bubble-radius: 4vw;
-  --bubble-float-duration: 12s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 2s;
-  --bubble-sway-delay: 3s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(41) {
-  --bubble-left-offset: 78vw;
-  --bubble-radius: 5vw;
-  --bubble-float-duration: 8s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 2s;
-  --bubble-sway-delay: 3s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(42) {
-  --bubble-left-offset: 9vw;
-  --bubble-radius: 4vw;
-  --bubble-float-duration: 9s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 4s;
-  --bubble-sway-delay: 0s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(43) {
-  --bubble-left-offset: 66vw;
-  --bubble-radius: 5vw;
-  --bubble-float-duration: 11s;
-  --bubble-sway-duration: 4s;
-  --bubble-float-delay: 0s;
-  --bubble-sway-delay: 2s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(44) {
-  --bubble-left-offset: 96vw;
-  --bubble-radius: 6vw;
-  --bubble-float-duration: 10s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 1s;
-  --bubble-sway-delay: 2s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(45) {
-  --bubble-left-offset: 61vw;
-  --bubble-radius: 4vw;
-  --bubble-float-duration: 12s;
-  --bubble-sway-duration: 6s;
-  --bubble-float-delay: 3s;
-  --bubble-sway-delay: 1s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(46) {
-  --bubble-left-offset: 67vw;
-  --bubble-radius: 2vw;
-  --bubble-float-duration: 10s;
-  --bubble-sway-duration: 4s;
-  --bubble-float-delay: 1s;
-  --bubble-sway-delay: 3s;
-  --bubble-sway-type: sway-left-to-right;
-}
-.bubble:nth-child(47) {
-  --bubble-left-offset: 22vw;
-  --bubble-radius: 3vw;
-  --bubble-float-duration: 8s;
-  --bubble-sway-duration: 4s;
-  --bubble-float-delay: 0s;
-  --bubble-sway-delay: 0s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(48) {
-  --bubble-left-offset: 58vw;
-  --bubble-radius: 10vw;
-  --bubble-float-duration: 12s;
-  --bubble-sway-duration: 4s;
-  --bubble-float-delay: 2s;
-  --bubble-sway-delay: 2s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(49) {
-  --bubble-left-offset: 19vw;
-  --bubble-radius: 2vw;
-  --bubble-float-duration: 6s;
-  --bubble-sway-duration: 4s;
-  --bubble-float-delay: 3s;
-  --bubble-sway-delay: 4s;
-  --bubble-sway-type: sway-right-to-left;
-}
-.bubble:nth-child(50) {
-  --bubble-left-offset: 30vw;
-  --bubble-radius: 2vw;
-  --bubble-float-duration: 9s;
-  --bubble-sway-duration: 5s;
-  --bubble-float-delay: 0s;
-  --bubble-sway-delay: 0s;
-  --bubble-sway-type: sway-right-to-left;
-}
-
-@keyframes float-up {
-  to {
-    transform: translateY(-175vh);
-  }
-}
-@keyframes sway-left-to-right {
-  from {
-    transform: translateX(-100%);
-  }
-  to {
-    transform: translateX(100%);
-  }
-}
-@keyframes sway-right-to-left {
-  from {
-    transform: translateX(100%);
-  }
-  to {
-    transform: translateX(-100%);
-  }
-}
 @media screen and (min-width: 390px) and (max-width: 767px) {
   .container {
     background-image: linear-gradient(to bottom right, #FDFCFB, #E2D1C3);
@@ -984,6 +471,160 @@ body {
     padding: 0.75rem;
     margin-bottom: 0.75rem;
     font-size: 2rem;
+    font-weight: bold;
+  }
+  .container .transcation .transection-form input::-moz-placeholder {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  .container .transcation .transection-form input::placeholder {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  .container .transcation .transection-form button {
+    background: #000;
+    padding: 1.5rem 3.5rem;
+    font-size: 2.5rem;
+    font-weight: bolder;
+    color: white;
+    border-radius: 1rem;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  html {
+    font-size: 9.25px;
+  }
+  .container {
+    background-image: linear-gradient(to bottom right, #FDFCFB, #E2D1C3);
+    width: 80% m;
+    padding: 0.75rem;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    height: 95%;
+    border-radius: 1rem;
+  }
+  .container .expense_title {
+    font-size: 5rem;
+    font-weight: 800;
+    text-align: center;
+    padding-top: 0.8rem;
+    padding-bottom: 0.8rem;
+    color: black;
+  }
+  .container .cen {
+    display: flex;
+    justify-content: center;
+  }
+  .container .balance {
+    width: 60rem;
+    height: 16rem;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    border-radius: 1rem;
+  }
+  .container .balance h1 {
+    font-size: 6rem;
+    font-weight: bolder;
+  }
+  .container .balance h4 {
+    font-size: 3.5rem;
+    font-weight: bold;
+  }
+  .container .inc-exp-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+  .container .inc-exp-container .income {
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 33rem;
+    height: 15rem;
+    background: white;
+    padding: 0 2rem 0 2rem;
+    border: 0.5rem solid rgb(123, 203, 4);
+  }
+  .container .inc-exp-container .income h2 {
+    font-size: 4rem;
+    color: green;
+  }
+  .container .inc-exp-container .income h4 {
+    font-size: 3rem;
+    text-transform: uppercase;
+  }
+  .container .inc-exp-container .expense {
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 33rem;
+    height: 15rem;
+    background: white;
+    padding: 0 2rem 0 2rem;
+    border: 0.5rem solid rgb(232, 11, 11);
+  }
+  .container .inc-exp-container .expense h2 {
+    font-size: 4rem;
+    color: rgb(202, 15, 15);
+  }
+  .container .inc-exp-container .expense h4 {
+    font-size: 3rem;
+    text-transform: uppercase;
+  }
+  .container .history .title-history {
+    font-size: 6rem;
+    font-weight: 700;
+    padding-bottom: 1.5rem;
+  }
+  .container .history .history-box {
+    height: 25rem;
+    overflow: hidden;
+  }
+  .container .history .history-box:hover {
+    overflow-y: scroll;
+  }
+  .container .history .history-box li {
+    font-size: 2rem;
+    font-weight: bolder;
+    list-style: none;
+    background-color: #fff;
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+  }
+  .container .history .history-box li h4 {
+    font-size: 3rem;
+  }
+  .container .history .history-box li span {
+    font-size: 3rem;
+  }
+  .container .history .history-box li span i {
+    margin-left: 0.5rem;
+  }
+  .container .transcation .transaction-title {
+    margin-top: 1.25rem;
+    font-size: 3.5rem;
+    font-weight: 700;
+    margin-bottom: 1.25rem;
+  }
+  .container .transcation .transection-form {
+    display: flex;
+    flex-direction: column;
+  }
+  .container .transcation .transection-form input {
+    border-radius: 1rem;
+    padding: 1.25rem;
+    margin-bottom: 1rem;
+    font-size: 3rem;
     font-weight: bold;
   }
   .container .transcation .transection-form input::-moz-placeholder {
