--- a/style.css
+++ b/style.css
@@ -5,7 +5,12 @@
 }
 
 html {
-  font-size: 9px;
+  font-size: 8px;
+}
+
+hr {
+  color: white;
+  background: rgb(94, 58, 58);
 }
 
 .plus {
@@ -33,25 +38,24 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 95vh;
+  min-height: 90vh;
   background: #1a1e23;
 }
 
 .container {
   background-image: linear-gradient(to bottom right, #FDFCFB, #E2D1C3);
-  width: 70rem;
-  padding: 2rem;
+  width: 60rem;
+  padding: 1.5rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   height: 94%;
   border-radius: 1rem;
 }
 .container .expense_title {
-  font-size: 5.5rem;
+  font-size: 4rem;
   font-weight: bolder;
   text-align: center;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  color: black;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 .container .cen {
   display: flex;
@@ -59,7 +63,7 @@ body {
 }
 .container .balance {
   width: 60rem;
-  height: 12rem;
+  height: 10rem;
   background: white;
   display: flex;
   flex-direction: column;
@@ -69,11 +73,11 @@ body {
   border-radius: 1rem;
 }
 .container .balance h1 {
-  font-size: 6rem;
+  font-size: 5rem;
   font-weight: bolder;
 }
 .container .balance h4 {
-  font-size: 3.4rem;
+  font-size: 2.75rem;
   font-weight: bold;
 }
 .container .inc-exp-container {
@@ -88,18 +92,18 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 30rem;
-  height: 12rem;
+  width: 26rem;
+  height: 10rem;
   background: white;
   padding: 0 3rem 0 3rem;
   border: 0.5rem solid rgb(123, 203, 4);
 }
 .container .inc-exp-container .income h2 {
-  font-size: 4rem;
+  font-size: 3.5rem;
   color: green;
 }
 .container .inc-exp-container .income h4 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   text-transform: uppercase;
 }
 .container .inc-exp-container .expense {
@@ -108,38 +112,38 @@ body {
   flex-direction: column;
   justify-content: center;
   width: 30rem;
-  height: 12rem;
+  height: 10rem;
   background: white;
   padding: 0 3rem 0 3rem;
   border: 0.5rem solid rgb(232, 11, 11);
 }
 .container .inc-exp-container .expense h2 {
-  font-size: 4rem;
-  color: rgb(202, 15, 15);
+  font-size: 3.5rem;
+  color: rgb(194, 48, 48);
 }
 .container .inc-exp-container .expense h4 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   text-transform: uppercase;
 }
 .container .history .title-history {
-  font-size: 5rem;
-  padding-bottom: 1.2rem;
+  font-size: 3.5rem;
+  padding-bottom: 1.1rem;
 }
 .container .history .history-box {
-  height: 27rem;
+  height: 25rem;
   overflow: hidden;
 }
 .container .history .history-box:hover {
   overflow-y: scroll;
 }
 .container .history .history-box li {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: bolder;
   list-style: none;
   background-color: #fff;
   display: flex;
   justify-content: space-between;
-  padding: 1.3rem;
+  padding: 1.25rem;
   border-radius: 1rem;
   margin-bottom: 1.25rem;
 }
@@ -153,8 +157,8 @@ body {
   margin-left: 0.5rem;
 }
 .container .transcation .transaction-title {
-  margin-top: 1.5rem;
-  font-size: 3.5rem;
+  margin-top: 1.25rem;
+  font-size: 3rem;
   margin-bottom: 0.7rem;
 }
 .container .transcation .transection-form {
@@ -163,8 +167,8 @@ body {
 }
 .container .transcation .transection-form input {
   border-radius: 1rem;
-  padding: 1.5rem;
-  margin-bottom: 2rem;
+  padding: 1.25rem;
+  margin-bottom: 1.5rem;
   font-size: 2rem;
   font-weight: bold;
 }
