--- a/style.scss
+++ b/style.scss
@@ -5,9 +5,13 @@
 }
 
 html {
-  font-size: 9px;
+  font-size: 8px;
 }
 
+hr {
+  color: white;
+  background: rgb(94, 58, 58);
+}
 
 .plus {
   border: 1.5px solid rgb(41, 186, 41);
@@ -46,8 +50,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  // min-height: 100vh;
-  height: 95vh;
+  min-height: 90vh;
+  // height: 90vh;
   background: #1a1e23;
 }
 
@@ -58,21 +62,23 @@ body {
   // background: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%);
   background-image: linear-gradient(to bottom right, #FDFCFB, #E2D1C3);
 
-  width: 70rem;
-  padding: 2rem;
+  width: 60rem;
+  padding: 1.5rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   height: 94%;
-  // border: 2px solid red;
   border-radius: 1rem;
 
 
+
+
+
   .expense_title {
-    font-size: 5.5rem;
+    // border: 2px solid red;
+    font-size: 4rem;
     font-weight: bolder;
     text-align: center;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    color: black;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
   }
 
   .cen {
@@ -84,7 +90,7 @@ body {
 
   .balance {
     width: 60rem;
-    height: 12rem;
+    height: 10rem;
     background: white;
     display: flex;
     flex-direction: column;
@@ -95,19 +101,20 @@ body {
 
 
     h1 {
-      font-size: 6rem;
+      font-size: 5rem;
       font-weight: bolder;
 
     }
 
     h4 {
-      font-size: 3.4rem;
+      font-size: 2.75rem;
       font-weight: bold;
 
     }
   }
 
   .inc-exp-container {
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -119,19 +126,19 @@ body {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      width: 30rem;
-      height: 12rem;
+      width: 26rem;
+      height: 10rem;
       background: white;
       padding: 0 3rem 0 3rem;
       border: 0.5rem solid rgb(123, 203, 4);
 
       h2 {
-        font-size: 4rem;
+        font-size: 3.5rem;
         color: green;
       }
 
       h4 {
-        font-size: 2.5rem;
+        font-size: 2rem;
         text-transform: uppercase;
       }
     }
@@ -143,18 +150,18 @@ body {
       flex-direction: column;
       justify-content: center;
       width: 30rem;
-      height: 12rem;
+      height: 10rem;
       background: white;
       padding: 0 3rem 0 3rem;
       border: 0.5rem solid rgb(232, 11, 11);
 
       h2 {
-        font-size: 4rem;
-        color: rgb(202, 15, 15);
+        font-size: 3.5rem;
+        color: rgb(194, 48, 48);
       }
 
       h4 {
-        font-size: 2.5rem;
+        font-size: 2rem;
         text-transform: uppercase;
       }
     }
@@ -162,12 +169,12 @@ body {
 
   .history {
     .title-history {
-      font-size: 5rem;
-      padding-bottom: 1.2rem;
+      font-size: 3.5rem;
+      padding-bottom: 1.1rem;
     }
 
     .history-box {
-      height: 27rem;
+      height: 25rem;
       overflow: hidden;
 
       &:hover {
@@ -175,13 +182,13 @@ body {
       }
 
       li {
-        font-size: 1.5rem;
+        font-size: 1.25rem;
         font-weight: bolder;
         list-style: none;
         background-color: #fff;
         display: flex;
         justify-content: space-between;
-        padding: 1.3rem;
+        padding: 1.25rem;
         border-radius: 1rem;
         margin-bottom: 1.25rem;
 
@@ -202,8 +209,8 @@ body {
 
   .transcation {
     .transaction-title {
-      margin-top: 1.5rem;
-      font-size: 3.5rem;
+      margin-top: 1.25rem;
+      font-size: 3rem;
       margin-bottom: 0.7rem;
     }
 
@@ -213,8 +220,8 @@ body {
 
       input {
         border-radius: 1rem;
-        padding: 1.5rem;
-        margin-bottom: 2rem;
+        padding: 1.25rem;
+        margin-bottom: 1.5rem;
         font-size: 2rem;
         font-weight: bold;
       }
