bg change bubbles

--- a/style.scss
+++ b/style.scss
@@ -57,19 +57,12 @@ body {
 
 
 .container {
-  // border: 2px solid red;
-  // background: rgb(137, 136, 136);
-  // background: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%);
   background-image: linear-gradient(to bottom right, #FDFCFB, #E2D1C3);
-
   width: 60rem;
   padding: 1.5rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   height: 94%;
   border-radius: 1rem;
-
-
-
 
 
   .expense_title {
@@ -253,91 +246,91 @@ body {
 
 
 
-// $bubble-count: 50;
-// $sway-type: "sway-left-to-right", "sway-right-to-left";
+$bubble-count: 50;
+$sway-type: "sway-left-to-right", "sway-right-to-left";
 
-// @function random_range($min, $max) {
-//   $rand: random();
-//   $random_range: $min + floor($rand * (($max - $min) + 1));
-//   @return $random_range;
-// }
+@function random_range($min, $max) {
+  $rand: random();
+  $random_range: $min + floor($rand * (($max - $min) + 1));
+  @return $random_range;
+}
 
-// @function sample($list) {
-//   @return nth($list, random(length($list)));
-// }
+@function sample($list) {
+  @return nth($list, random(length($list)));
+}
 
-// .bubbles {
-//   // border: 2px solid red;
-//   position: relative;
-//   width: 100%;
-//   height: 100vh;
-//   overflow: hidden;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-// }
+.bubbles {
+  // border: 2px solid red;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-// .bubble {
-//   z-index: -1000;
-//   position: absolute;
-//   left: var(--bubble-left-offset);
-//   bottom: -75%;
-//   display: block;
-//   width: var(--bubble-radius);
-//   height: var(--bubble-radius);
-//   border-radius: 50%;
-//   animation: float-up var(--bubble-float-duration) var(--bubble-float-delay) ease-in infinite;
+.bubble {
+  z-index: -1000;
+  position: absolute;
+  left: var(--bubble-left-offset);
+  bottom: -75%;
+  display: block;
+  width: var(--bubble-radius);
+  height: var(--bubble-radius);
+  border-radius: 50%;
+  animation: float-up var(--bubble-float-duration) var(--bubble-float-delay) ease-in infinite;
 
-//   &::before {
-//     position: absolute;
-//     content: '';
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     background: hsla(183, 94%, 76%, 0.3);
-//     border-radius: inherit;
-//     animation: var(--bubble-sway-type) var(--bubble-sway-duration) var(--bubble-sway-delay) ease-in-out alternate infinite;
-//   }
+  &::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: hsla(183, 94%, 76%, 0.3);
+    border-radius: inherit;
+    animation: var(--bubble-sway-type) var(--bubble-sway-duration) var(--bubble-sway-delay) ease-in-out alternate infinite;
+  }
 
-//   @for $i from 0 through $bubble-count {
-//     &:nth-child(#{$i}) {
-//       --bubble-left-offset: #{random_range(0vw, 100vw)};
-//       --bubble-radius: #{random_range(1vw, 10vw)};
-//       --bubble-float-duration: #{random_range(6s, 12s)};
-//       --bubble-sway-duration: #{random_range(4s, 6s)};
-//       --bubble-float-delay: #{random_range(0s, 4s)};
-//       --bubble-sway-delay: #{random_range(0s, 4s)};
-//       --bubble-sway-type: #{sample($sway-type)};
-//     }
-//   }
-// }
+  @for $i from 0 through $bubble-count {
+    &:nth-child(#{$i}) {
+      --bubble-left-offset: #{random_range(0vw, 100vw)};
+      --bubble-radius: #{random_range(1vw, 10vw)};
+      --bubble-float-duration: #{random_range(6s, 12s)};
+      --bubble-sway-duration: #{random_range(4s, 6s)};
+      --bubble-float-delay: #{random_range(0s, 4s)};
+      --bubble-sway-delay: #{random_range(0s, 4s)};
+      --bubble-sway-type: #{sample($sway-type)};
+    }
+  }
+}
 
-// @keyframes float-up {
-//   to {
-//     transform: translateY(-175vh);
-//   }
-// }
+@keyframes float-up {
+  to {
+    transform: translateY(-175vh);
+  }
+}
 
-// @keyframes sway-left-to-right {
-//   from {
-//     transform: translateX(-100%);
-//   }
+@keyframes sway-left-to-right {
+  from {
+    transform: translateX(-100%);
+  }
 
-//   to {
-//     transform: translateX(100%);
-//   }
-// }
+  to {
+    transform: translateX(100%);
+  }
+}
 
-// @keyframes sway-right-to-left {
-//   from {
-//     transform: translateX(100%);
-//   }
+@keyframes sway-right-to-left {
+  from {
+    transform: translateX(100%);
+  }
 
-//   to {
-//     transform: translateX(-100%);
-//   }
-// }
+  to {
+    transform: translateX(-100%);
+  }
+}
 
 
 
@@ -530,6 +523,97 @@ body {
       }
     }
   }
+
+
+
+
+
+  $bubble-count: 50;
+  $sway-type: "sway-left-to-right", "sway-right-to-left";
+
+  @function random_range($min, $max) {
+    $rand: random();
+    $random_range: $min + floor($rand * (($max - $min) + 1));
+    @return $random_range;
+  }
+
+  @function sample($list) {
+    @return nth($list, random(length($list)));
+  }
+
+  .bubbles {
+    // border: 2px solid red;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .bubble {
+    z-index: -1000;
+    position: absolute;
+    left: var(--bubble-left-offset);
+    bottom: -75%;
+    display: block;
+    width: var(--bubble-radius);
+    height: var(--bubble-radius);
+    border-radius: 50%;
+    animation: float-up var(--bubble-float-duration) var(--bubble-float-delay) ease-in infinite;
+
+    &::before {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: hsla(183, 94%, 76%, 0.3);
+      border-radius: inherit;
+      animation: var(--bubble-sway-type) var(--bubble-sway-duration) var(--bubble-sway-delay) ease-in-out alternate infinite;
+    }
+
+    @for $i from 0 through $bubble-count {
+      &:nth-child(#{$i}) {
+        --bubble-left-offset: #{random_range(0vw, 100vw)};
+        --bubble-radius: #{random_range(1vw, 10vw)};
+        --bubble-float-duration: #{random_range(6s, 12s)};
+        --bubble-sway-duration: #{random_range(4s, 6s)};
+        --bubble-float-delay: #{random_range(0s, 4s)};
+        --bubble-sway-delay: #{random_range(0s, 4s)};
+        --bubble-sway-type: #{sample($sway-type)};
+      }
+    }
+  }
+
+  @keyframes float-up {
+    to {
+      transform: translateY(-175vh);
+    }
+  }
+
+  @keyframes sway-left-to-right {
+    from {
+      transform: translateX(-100%);
+    }
+
+    to {
+      transform: translateX(100%);
+    }
+  }
+
+  @keyframes sway-right-to-left {
+    from {
+      transform: translateX(100%);
+    }
+
+    to {
+      transform: translateX(-100%);
+    }
+  }
+
 }
 
 
@@ -731,6 +815,93 @@ body {
       }
     }
   }
+
+  $bubble-count: 50;
+  $sway-type: "sway-left-to-right", "sway-right-to-left";
+
+  @function random_range($min, $max) {
+    $rand: random();
+    $random_range: $min + floor($rand * (($max - $min) + 1));
+    @return $random_range;
+  }
+
+  @function sample($list) {
+    @return nth($list, random(length($list)));
+  }
+
+  .bubbles {
+    // border: 2px solid red;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .bubble {
+    z-index: -1000;
+    position: absolute;
+    left: var(--bubble-left-offset);
+    bottom: -75%;
+    display: block;
+    width: var(--bubble-radius);
+    height: var(--bubble-radius);
+    border-radius: 50%;
+    animation: float-up var(--bubble-float-duration) var(--bubble-float-delay) ease-in infinite;
+
+    &::before {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: hsla(183, 94%, 76%, 0.3);
+      border-radius: inherit;
+      animation: var(--bubble-sway-type) var(--bubble-sway-duration) var(--bubble-sway-delay) ease-in-out alternate infinite;
+    }
+
+    @for $i from 0 through $bubble-count {
+      &:nth-child(#{$i}) {
+        --bubble-left-offset: #{random_range(0vw, 100vw)};
+        --bubble-radius: #{random_range(1vw, 10vw)};
+        --bubble-float-duration: #{random_range(6s, 12s)};
+        --bubble-sway-duration: #{random_range(4s, 6s)};
+        --bubble-float-delay: #{random_range(0s, 4s)};
+        --bubble-sway-delay: #{random_range(0s, 4s)};
+        --bubble-sway-type: #{sample($sway-type)};
+      }
+    }
+  }
+
+  @keyframes float-up {
+    to {
+      transform: translateY(-175vh);
+    }
+  }
+
+  @keyframes sway-left-to-right {
+    from {
+      transform: translateX(-100%);
+    }
+
+    to {
+      transform: translateX(100%);
+    }
+  }
+
+  @keyframes sway-right-to-left {
+    from {
+      transform: translateX(100%);
+    }
+
+    to {
+      transform: translateX(-100%);
+    }
+  }
+
 }
 
 
@@ -931,4 +1102,91 @@ body {
       }
     }
   }
+
+  $bubble-count: 50;
+  $sway-type: "sway-left-to-right", "sway-right-to-left";
+
+  @function random_range($min, $max) {
+    $rand: random();
+    $random_range: $min + floor($rand * (($max - $min) + 1));
+    @return $random_range;
+  }
+
+  @function sample($list) {
+    @return nth($list, random(length($list)));
+  }
+
+  .bubbles {
+    // border: 2px solid red;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .bubble {
+    z-index: -1000;
+    position: absolute;
+    left: var(--bubble-left-offset);
+    bottom: -75%;
+    display: block;
+    width: var(--bubble-radius);
+    height: var(--bubble-radius);
+    border-radius: 50%;
+    animation: float-up var(--bubble-float-duration) var(--bubble-float-delay) ease-in infinite;
+
+    &::before {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: hsla(183, 94%, 76%, 0.3);
+      border-radius: inherit;
+      animation: var(--bubble-sway-type) var(--bubble-sway-duration) var(--bubble-sway-delay) ease-in-out alternate infinite;
+    }
+
+    @for $i from 0 through $bubble-count {
+      &:nth-child(#{$i}) {
+        --bubble-left-offset: #{random_range(0vw, 100vw)};
+        --bubble-radius: #{random_range(1vw, 10vw)};
+        --bubble-float-duration: #{random_range(6s, 12s)};
+        --bubble-sway-duration: #{random_range(4s, 6s)};
+        --bubble-float-delay: #{random_range(0s, 4s)};
+        --bubble-sway-delay: #{random_range(0s, 4s)};
+        --bubble-sway-type: #{sample($sway-type)};
+      }
+    }
+  }
+
+  @keyframes float-up {
+    to {
+      transform: translateY(-175vh);
+    }
+  }
+
+  @keyframes sway-left-to-right {
+    from {
+      transform: translateX(-100%);
+    }
+
+    to {
+      transform: translateX(100%);
+    }
+  }
+
+  @keyframes sway-right-to-left {
+    from {
+      transform: translateX(100%);
+    }
+
+    to {
+      transform: translateX(-100%);
+    }
+  }
+
 }
