--- a/style.scss
+++ b/style.scss
@@ -50,8 +50,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 90vh;
-  // height: 90vh;
+  // min-height: 90vh;
+  height: 95h;
   background: #1a1e23;
 }
 
@@ -235,12 +235,6 @@ body {
     }
   }
 }
-
-
-
-
-
-
 
 
 
