--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
   background: #1a1e23;
 }
 
@@ -47,7 +47,7 @@ body {
   width: 80rem;
   padding: 1.5rem;
   box-shadow: rgba(15, 14, 14, 0.24) 0px 3px 8px;
-  height: 90vh;
+  min-height: 90vh;
   border-radius: 1rem;
   display: grid;
   grid-template-rows: 30% 45% 28%;
