--- a/style.css
+++ b/style.css
@@ -38,16 +38,16 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  height: 99vh;
   background: #1a1e23;
 }
 
 .container {
   background-image: linear-gradient(to bottom right, #FDFCFB, #E2D1C3);
-  width: 80rem;
-  padding: 1.5rem;
+  width: 70rem;
+  padding: 1.3rem;
   box-shadow: rgba(15, 14, 14, 0.24) 0px 3px 8px;
-  min-height: 90vh;
+  height: 94%;
   border-radius: 1rem;
   display: grid;
   grid-template-rows: 30% 45% 28%;
@@ -181,45 +181,514 @@ body {
   margin: 1rem 0;
 }
 .container footer .transcation {
-  height: 100%;
+  height: 95%;
 }
 .container footer .transcation .transaction-title {
-  margin-top: 2rem;
-  font-size: 3rem;
-  margin-bottom: 0.6rem;
+  text-align: center;
+  margin-top: 1.75rem;
+  font-size: 4rem;
+  color: #1a1e23;
+  margin-bottom: 0.5rem;
+  font-weight: 700;
 }
 .container footer .transcation .transection-form {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+.container footer .transcation .transection-form .input-section {
+  display: flex;
+  justify-content: space-around;
+  width: 96%;
 }
 .container footer .transcation .transection-form .input-section input {
   border-radius: 1rem;
-  padding: 2rem;
-  margin-bottom: 1.5rem;
-  font-size: 2rem;
+  padding: 1.5rem;
+  margin-bottom: 1.25rem;
+  font-size: 2.5rem;
   font-weight: bold;
-  width: 48%;
+  width: 47%;
 }
 .container footer .transcation .transection-form .input-section input::-moz-placeholder {
-  font-size: 2rem;
+  font-size: 2.3rem;
   font-weight: bold;
 }
 .container footer .transcation .transection-form .input-section input::placeholder {
-  font-size: 2rem;
+  font-size: 2.3rem;
   font-weight: bold;
 }
 .container footer .transcation .transection-form input {
   border-radius: 1rem;
-  padding: 2rem;
-  margin-bottom: 1.5rem;
-  font-size: 3rem;
+  width: 96%;
+  padding: 1.5rem;
+  margin-bottom: 1.25rem;
+  font-size: 2.5rem;
   font-weight: bold;
 }
 .container footer .transcation .transection-form button {
   background: #000;
-  padding: 1.25rem 3.25rem;
-  font-size: 2.75rem;
+  padding: 0.5rem;
+  width: 96%;
+  font-size: 4rem;
   font-weight: bolder;
   color: white;
   border-radius: 1rem;
+}
+
+@media screen and (min-width: 390px) and (max-width: 767px) {
+  .container {
+    background-image: linear-gradient(to bottom right, #FDFCFB, #E2D1C3);
+    width: 38rem;
+    padding: 1rem;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    height: 95%;
+    border-radius: 1rem;
+  }
+  .container .expense_title {
+    font-size: 3rem;
+    font-weight: 800;
+    text-align: center;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    color: black;
+  }
+  .container .cen {
+    display: flex;
+    justify-content: center;
+  }
+  .container .balance {
+    width: 40rem;
+    height: 12rem;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    border-radius: 1rem;
+  }
+  .container .balance h1 {
+    font-size: 4rem;
+    font-weight: bolder;
+  }
+  .container .balance h4 {
+    font-size: 2.4rem;
+    font-weight: bold;
+  }
+  .container .inc-exp-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 2rem;
+    margin-bottom: 1.5rem;
+  }
+  .container .inc-exp-container .income {
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 17rem;
+    height: 10rem;
+    background: white;
+    padding: 0 2rem 0 2rem;
+    border: 0.5rem solid rgb(123, 203, 4);
+  }
+  .container .inc-exp-container .income h2 {
+    font-size: 2.75rem;
+    color: green;
+  }
+  .container .inc-exp-container .income h4 {
+    font-size: 2rem;
+    text-transform: uppercase;
+  }
+  .container .inc-exp-container .expense {
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 17rem;
+    height: 10rem;
+    background: white;
+    padding: 0 2rem 0 2rem;
+    border: 0.5rem solid rgb(232, 11, 11);
+  }
+  .container .inc-exp-container .expense h2 {
+    font-size: 2.75rem;
+    color: rgb(202, 15, 15);
+  }
+  .container .inc-exp-container .expense h4 {
+    font-size: 2rem;
+    text-transform: uppercase;
+  }
+  .container .history .title-history {
+    font-size: 4rem;
+    font-weight: 700;
+    padding-bottom: 1.15rem;
+  }
+  .container .history .history-box {
+    height: 17.5rem;
+    overflow: hidden;
+  }
+  .container .history .history-box:hover {
+    overflow-y: scroll;
+  }
+  .container .history .history-box li {
+    font-size: 1.25rem;
+    font-weight: bolder;
+    list-style: none;
+    background-color: #fff;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+  }
+  .container .history .history-box li h4 {
+    font-size: 2rem;
+  }
+  .container .history .history-box li span {
+    font-size: 2rem;
+  }
+  .container .history .history-box li span i {
+    margin-left: 0.5rem;
+  }
+  .container .transcation .transaction-title {
+    margin-top: 1rem;
+    font-size: 2.6rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+  }
+  .container .transcation .transection-form {
+    display: flex;
+    flex-direction: column;
+  }
+  .container .transcation .transection-form input {
+    border-radius: 1rem;
+    padding: 1.25rem;
+    margin-bottom: 1rem;
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  .container .transcation .transection-form input::-moz-placeholder {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  .container .transcation .transection-form input::placeholder {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  .container .transcation .transection-form button {
+    background: #000;
+    padding: 1.5rem 3.5rem;
+    font-size: 2.5rem;
+    font-weight: bolder;
+    color: white;
+    border-radius: 1rem;
+  }
+}
+@media screen and (min-width: 350px) and (max-width: 390px) {
+  .container {
+    background-image: linear-gradient(to bottom right, #FDFCFB, #E2D1C3);
+    width: 33rem;
+    padding: 0.75rem;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    height: 95%;
+    border-radius: 1rem;
+  }
+  .container .expense_title {
+    font-size: 3rem;
+    font-weight: 800;
+    text-align: center;
+    padding-top: 0.8rem;
+    padding-bottom: 0.8rem;
+    color: black;
+  }
+  .container .cen {
+    display: flex;
+    justify-content: center;
+  }
+  .container .balance {
+    width: 40rem;
+    height: 8.75rem;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    border-radius: 1rem;
+  }
+  .container .balance h1 {
+    font-size: 3.5rem;
+    font-weight: bolder;
+  }
+  .container .balance h4 {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  .container .inc-exp-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+  .container .inc-exp-container .income {
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 15rem;
+    height: 9rem;
+    background: white;
+    padding: 0 2rem 0 2rem;
+    border: 0.5rem solid rgb(123, 203, 4);
+  }
+  .container .inc-exp-container .income h2 {
+    font-size: 2rem;
+    color: green;
+  }
+  .container .inc-exp-container .income h4 {
+    font-size: 1.8rem;
+    text-transform: uppercase;
+  }
+  .container .inc-exp-container .expense {
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 15rem;
+    height: 9rem;
+    background: white;
+    padding: 0 2rem 0 2rem;
+    border: 0.5rem solid rgb(232, 11, 11);
+  }
+  .container .inc-exp-container .expense h2 {
+    font-size: 2rem;
+    color: rgb(202, 15, 15);
+  }
+  .container .inc-exp-container .expense h4 {
+    font-size: 1.8rem;
+    text-transform: uppercase;
+  }
+  .container .history .title-history {
+    font-size: 3rem;
+    font-weight: 700;
+    padding-bottom: 1rem;
+  }
+  .container .history .history-box {
+    height: 17rem;
+    overflow: hidden;
+  }
+  .container .history .history-box:hover {
+    overflow-y: scroll;
+  }
+  .container .history .history-box li {
+    font-size: 1rem;
+    font-weight: bolder;
+    list-style: none;
+    background-color: #fff;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-bottom: 0.75rem;
+  }
+  .container .history .history-box li h4 {
+    font-size: 2rem;
+  }
+  .container .history .history-box li span {
+    font-size: 2rem;
+  }
+  .container .history .history-box li span i {
+    margin-left: 0.5rem;
+  }
+  .container .transcation .transaction-title {
+    margin-top: 0.75rem;
+    font-size: 2.6rem;
+    font-weight: 700;
+    margin-bottom: 0.75rem;
+  }
+  .container .transcation .transection-form {
+    display: flex;
+    flex-direction: column;
+  }
+  .container .transcation .transection-form input {
+    border-radius: 1rem;
+    padding: 0.75rem;
+    margin-bottom: 0.75rem;
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  .container .transcation .transection-form input::-moz-placeholder {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  .container .transcation .transection-form input::placeholder {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  .container .transcation .transection-form button {
+    background: #000;
+    padding: 1.5rem 3.5rem;
+    font-size: 2.5rem;
+    font-weight: bolder;
+    color: white;
+    border-radius: 1rem;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  html {
+    font-size: 9.25px;
+  }
+  .container {
+    background-image: linear-gradient(to bottom right, #FDFCFB, #E2D1C3);
+    width: 80% m;
+    padding: 0.75rem;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    height: 95%;
+    border: 2px solid red;
+    border-radius: 1rem;
+  }
+  .container .expense_title {
+    font-size: 5rem;
+    font-weight: 800;
+    text-align: center;
+    padding-top: 0.8rem;
+    padding-bottom: 0.8rem;
+    color: black;
+  }
+  .container .cen {
+    display: flex;
+    justify-content: center;
+  }
+  .container .balance {
+    width: 60rem;
+    height: 16rem;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    border-radius: 1rem;
+  }
+  .container .balance h1 {
+    font-size: 6rem;
+    font-weight: bolder;
+  }
+  .container .balance h4 {
+    font-size: 3.5rem;
+    font-weight: bold;
+  }
+  .container .inc-exp-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+  .container .inc-exp-container .income {
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 33rem;
+    height: 15rem;
+    background: white;
+    padding: 0 2rem 0 2rem;
+    border: 0.5rem solid rgb(123, 203, 4);
+  }
+  .container .inc-exp-container .income h2 {
+    font-size: 4rem;
+    color: green;
+  }
+  .container .inc-exp-container .income h4 {
+    font-size: 3rem;
+    text-transform: uppercase;
+  }
+  .container .inc-exp-container .expense {
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 33rem;
+    height: 15rem;
+    background: white;
+    padding: 0 2rem 0 2rem;
+    border: 0.5rem solid rgb(232, 11, 11);
+  }
+  .container .inc-exp-container .expense h2 {
+    font-size: 4rem;
+    color: rgb(202, 15, 15);
+  }
+  .container .inc-exp-container .expense h4 {
+    font-size: 3rem;
+    text-transform: uppercase;
+  }
+  .container .history .title-history {
+    font-size: 6rem;
+    font-weight: 700;
+    padding-bottom: 1.5rem;
+  }
+  .container .history .history-box {
+    height: 25rem;
+    overflow: hidden;
+  }
+  .container .history .history-box:hover {
+    overflow-y: scroll;
+  }
+  .container .history .history-box li {
+    font-size: 2rem;
+    font-weight: bolder;
+    list-style: none;
+    background-color: #fff;
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+  }
+  .container .history .history-box li h4 {
+    font-size: 3rem;
+  }
+  .container .history .history-box li span {
+    font-size: 3rem;
+  }
+  .container .history .history-box li span i {
+    margin-left: 0.5rem;
+  }
+  .container .transcation .transaction-title {
+    margin-top: 1.25rem;
+    font-size: 3.5rem;
+    font-weight: 700;
+    margin-bottom: 1.25rem;
+  }
+  .container .transcation .transection-form {
+    display: flex;
+    flex-direction: column;
+  }
+  .container .transcation .transection-form input {
+    border-radius: 1rem;
+    padding: 1.25rem;
+    margin-bottom: 1rem;
+    font-size: 3rem;
+    font-weight: bold;
+  }
+  .container .transcation .transection-form input::-moz-placeholder {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  .container .transcation .transection-form input::placeholder {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  .container .transcation .transection-form button {
+    background: #000;
+    padding: 1.5rem 3.5rem;
+    font-size: 2.5rem;
+    font-weight: bolder;
+    color: white;
+    border-radius: 1rem;
+  }
 }/*# sourceMappingURL=style.css.map */
